RESOLVED FIXED199727
Fix non-thread safe use of makeWeakPtr() under MediaPlayerPrivateMediaFoundation::CustomVideoPresenter::processInputNotify()
https://bugs.webkit.org/show_bug.cgi?id=199727
Summary Fix non-thread safe use of makeWeakPtr() under MediaPlayerPrivateMediaFoundat...
Chris Dumez
Reported 2019-07-11 14:27:38 PDT
Fix non-thread safe use of makeWeakPtr() under MediaPlayerPrivateMediaFoundation::CustomVideoPresenter::processInputNotify().
Attachments
Patch (1.74 KB, patch)
2019-07-11 14:29 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-07-11 14:29:23 PDT
WebKit Commit Bot
Comment 2 2019-07-11 21:37:05 PDT
Comment on attachment 373953 [details] Patch Clearing flags on attachment: 373953 Committed r247383: <https://trac.webkit.org/changeset/247383>
WebKit Commit Bot
Comment 3 2019-07-11 21:37:06 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-07-11 21:38:17 PDT
Note You need to log in before you can comment on or make changes to this bug.